@@ -5,11 +5,11 @@ public class test {
 	public static void main(String[] args) {
 		//ADD AND ADD AT INDEX WORK TEST REST
 		LinkedList test = new LinkedList();
-		test.add(3);
+		test.add(1);
 		test.add(2);
-		test.addFirst(1);
-		test.remove(0);
-		test.get(0);
+		test.add(3);
+		test.addFirst(0);
+		test.removeLast();
 		
 
 	}
